force-app/main/default/objects/Design_Review__c/Design_Review__c.object-meta.xml
<CustomObject>
    <description>shows the Design Reviews done by u-blox Technical Support.</description>
    <label>Design Review</label>
    <nameField>
        <displayFormat>CDR-{0000}</displayFormat>
        <label>Design Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>