force-app/main/default/objects/Design_Review__c/fields/Additional_Material_Received__c.field-meta.xml
<CustomField>
    <fullName>Additional_Material_Received__c</fullName>
    <label>Additional Material Received</label>
    <type>TextArea</type>
</CustomField>