force-app/main/default/objects/Design_Review__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Design Reviews</relationshipLabel>
    <relationshipName>Design_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>