force-app/main/default/objects/Design_Review__c/fields/Date_Parts_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Parts_Received__c</fullName>
    <label>Date Parts Received</label>
    <type>Date</type>
</CustomField>