force-app/main/default/objects/Design_Review__c/fields/Date_Parts_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Parts_Returned__c</fullName>
    <label>Date Parts Returned</label>
    <type>Date</type>
</CustomField>