force-app/main/default/objects/Design_Review__c/fields/Date_Review_Doc_sent_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Review_Doc_sent_to_customer__c</fullName>
    <label>Date Review Doc sent to customer</label>
    <type>Date</type>
</CustomField>