force-app/main/default/objects/Design_Review__c/fields/Design_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Design_Review_Status__c</fullName>
    <label>Design Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>