force-app/main/default/objects/Design_Review__c/fields/Design_Revisioh__c.field-meta.xml
<CustomField>
    <fullName>Design_Revisioh__c</fullName>
    <label>Design Revision</label>
    <length>30</length>
    <type>Text</type>
</CustomField>