force-app/main/default/objects/Design_Review__c/fields/Device_Identification__c.field-meta.xml
<CustomField>
    <fullName>Device_Identification__c</fullName>
    <label>Device Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>