force-app/main/default/objects/Design_Review__c/fields/Email_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Owner__c</fullName>
    <inlineHelpText>Email address of the account owner related to this Design Review.</inlineHelpText>
    <label>Email Account Owner</label>
    <type>Email</type>
</CustomField>