force-app/main/default/objects/Design_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the opportunity this Design Review is related to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Design Reviews</relationshipLabel>
    <relationshipName>Design_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>