force-app/main/default/objects/Design_Review__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Owner of the design review</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>