force-app/main/default/objects/Design_Review__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Design Reviews</relationshipLabel>
    <relationshipName>Design_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>