force-app/main/default/objects/Design_Review__c/fields/Qty_Received_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Qty_Received_From_Customer__c</fullName>
    <label>Qty Received From Customer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>