force-app/main/default/objects/Design_Review__c/fields/Remark_Received_Goods__c.field-meta.xml
<CustomField>
    <fullName>Remark_Received_Goods__c</fullName>
    <label>Remark Received Goods</label>
    <type>TextArea</type>
</CustomField>