force-app/main/default/objects/Design_Review__c/fields/Review_Document_Numer__c.field-meta.xml
<CustomField>
    <fullName>Review_Document_Numer__c</fullName>
    <label>Review Document Numer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>