force-app/main/default/objects/Design_Review__c/fields/Type_No__c.field-meta.xml
<CustomField>
    <fullName>Type_No__c</fullName>
    <formula>Product_Name__r.Type_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type No</label>
    <type>Text</type>
</CustomField>