force-app/main/default/objects/Design_Review__c/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <formula>TEXT(Account_Name__r.uB_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>uB Office</label>
    <type>Text</type>
</CustomField>