force-app/main/default/objects/Design_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Design_Review_Status__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Date_Review_Doc_sent_to_customer__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Design Reviews</label>
    <language>en_US</language>
</ListView>